--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="envelope">
                     <div class="letter">
                         <div class="text">
-                            <strong>Querida Inés,</strong>
+                            <strong>Queridx ...,</strong>
                             <p>
 
                             </p>
