--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <div class="envelope">
                     <div class="letter">
                         <div class="text">
-                            <strong>Queridx ...,</strong>
+                            <strong>Querida Carla</strong>
                             <p>
-
+                                Felices fiestas Carla :), me alegra mucho poder compartir esta experiencia contigo. ERES UNA CAMPEONA!!!!
                             </p>
                         </div>
                     </div>
